Quartz sync: Sep 19, 2025, 1:03 AM

--- a/references.bib
+++ b/references.bib
@@ -112,6 +112,17 @@
   publisher = {Mizan Pustaka},
   language = {en}
 }
+@article{azram_2012,
+  title        = {Epistemology: An Islamic Perspective},
+  author       = {Azram, M.},
+  journal      = {IIUM Engineering Journal},
+  volume       = {12},
+  number       = {5},
+  year         = {2012},
+  month        = {Jan},
+  doi          = {10.31436/iiumej.v12i5.240},
+  url          = {https://journals.iium.edu.my/ejournal/index.php/iiumej/article/view/240}
+}
 @thesis{baker2014a,
   author = {Baker, E.},
   date = {2014},
@@ -757,7 +768,7 @@
   address = {Cambridge, Massachusetts}
 }
 @misc{meadows1999a,
-  author = {Meadows, D.},
+  author = {Meadows},
   date = {1999},
   title = {Leverage Points: Places to Intervene in a System},
   url = {https://donellameadows.org/archives/leverage-points-places-to-intervene-in-a-system/},
@@ -775,7 +786,7 @@
   address = {New Haven}
 }
 @incollection{meadows2005a,
-  author = {Meadows, D.H.},
+  author = {Meadows},
   date = {2005},
   title = {The limits to growth: the 30-year update},
   edition = {3rd revised, expanded and updated},
@@ -979,6 +990,25 @@
   journal = {Organization},
   number = {6}
 }
+@book{perkins_confessions_2023,
+	address = {Oakland, CA},
+	edition = {3rd edition},
+	title = {Confessions of an economic hit man},
+	isbn = {9781523001897},
+	abstract = {"The riveting third edition of this New York Times bestselling title expands its focus to China, exposes corruption on an international scale, and offers much-needed solutions. Extensively updated, this edition features fourteen new chapters, including a new introduction and conclusion. The book brings the story of economic hit men (EHMs) up-to-date and focuses on China's EHM strategy. EHMs are highly paid professionals who use development loans to cheat countries around the globe out of trillions of dollars and force them to serve US interests. Former economic hit man John Perkins gives an insider view into this system. With a truly global perspective, this book offers powerful revelations on extremely timely elements, including the third economic hit man wave that is sweeping the world and the way China optimizes US EHM models to make them a more dominating force. China's strategy is even more dangerous since it's successful at enticing lower income nations. Perkins also reveals how we can transform what he calls a failing Death Economy into a Life Economy. He encourages China's leaders to apply the Confucian ideal of serving the family to the global community to end the EHM strategy. The book ultimately provides a source of hope and inspires readers to participate in a new era of global cooperation"--},
+	publisher = {Berrett-Koehler Publishers, Inc},
+	author = {Perkins, John},
+	year = {2023},
+	keywords = {Perkins, John, United States, National Security Agency, Biography, Chas. T. Main, Inc, World Bank, Developing countries, Economists, United States, Biography, Energy consultants, United States, Biography, Intelligence officers, United States, Biography, Corporations, American, Corrupt practices, Imperialism, History, 20th century, Imperialism, History, 21st century, Biographies},
+}
+@misc{percy_2021,
+  author       = {Percy, Andrew},
+  title        = {Universal Basic Prosperity: Sustainable Prosperity for the 21st Century},
+  year         = {2021},
+  institution  = {UCL Institute for Global Prosperity},
+  address      = {London, UK},
+  language     = {en}
+}
 @misc{pettifor2017a,
   author = {Pettifor, A.},
   date = {2017},
@@ -1164,7 +1194,7 @@
   address = {Oakland, CA}
 }
 @book{scharmer2018a,
-  author = {Scharmer, O.},
+  author = {Scharmer},
   date = {2018},
   title = {The Essentials of Theory U: Core Principles and Applications},
   publisher = {Berrett-Koehler Publishers},
